Modify property api for compare and favorite id
