# docs/api/swagger.yaml
@@ -2519,10 +2519,10 @@ definitions:
               type: "number"
             is_active:
               type: "boolean"
-            is_compared:
-              type: "boolean"
-            is_favorited:
-              type: "boolean"
+            compare_id:
+              type: "number"
+            favorite_id:
+              type: "number"
             building_info:
               type: object
               properties:
@@ -2617,9 +2617,9 @@ definitions:
         type: "number"
       is_active:
         type: "boolean"
-      is_compared:
-        type: "boolean"
-      is_favorited:
+      compare_id:
+        type: "number"
+      favorite_id:
         type: "boolean"
       building_info:
         type: object
