# src/property/api/views.py
@@ -40,23 +40,19 @@ class PropertyViewSet(viewsets.ModelViewSet):
                 .annotate(full_file_url=Concat(Value("/media/"), F("file"), output_field=CharField()))
                 .values("full_file_url")[:1]
             ),
-            # Annotate is_compared based on whether the property is in the user's comparison list
-            is_compared=Case(
-                When(compareproperty__user=user, then=Value(True)),
-                default=Value(False),
-                output_field=BooleanField(),
-            )
+            # Annotate compare_id based on whether the property is in the user's comparison list
+            compare_id=Subquery(CompareProperty.objects.filter(property=OuterRef("pk"), user=user).values("id")[:1])
             if user.is_authenticated
-            # If the user is not authenticated, set is_compared to False for all properties
+            # If the user is not authenticated, set compare_id to null for all properties
             else Value(False, output_field=BooleanField()),
-            # Annotate is_favorited based on whether the property is in the user's favorite list
-            is_favorited=Case(
-                When(prospectfavoriteproperty__prospect=user.prospectprofile, then=Value(True)),
-                default=Value(False),
-                output_field=BooleanField(),
+            # Annotate favorite_id based on whether the property is in the user's favorite list
+            favorite_id=Subquery(
+                ProspectFavoriteProperty.objects.filter(property=OuterRef("pk"), prospect=user.prospectprofile).values(
+                    "id"
+                )[:1]
             )
             if user.is_authenticated
-            # If the user is not authenticated, set is_favorited to False for all properties
+            # If the user is not authenticated, set favorite_id to null for all properties
             else Value(False, output_field=BooleanField()),
         )
 
